# nodedb

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.Apache-2.0  README.md  deny.toml
.config/: nextest.toml
.github/: FUNDING.yml
docs/: README.md  architecture.md  databases.md  graph.md  protocols.md  query-language.md
nodedb-array/: Cargo.toml  README.md
nodedb-bridge/: Cargo.toml  README.md
nodedb-bridge/benches/: wfq_fairness.rs
nodedb-bridge/src/: eventfd.rs  lib.rs  wfq.rs  wfq_metrics.rs
nodedb-bridge/tests/: cross_runtime.rs
nodedb-client/: README.md
nodedb-client-tests/: Cargo.toml
nodedb-client-tests/src/: lib.rs
nodedb-client-tests/tests/: ddl_via_extended_query.rs  execute_sql_params_round_trip.rs  graph_shortest_path_default_round_trip.rs  graph_traverse_remote_round_trip.rs  native_execute_sql_params_round_trip.rs  text_search_default_round_trip.rs  vector_insert_field_round_trip.rs  vector_search_field_round_trip.rs  vector_search_filter_round_trip.rs
nodedb-cluster-tests/: Cargo.toml
nodedb-cluster-tests/src/: lib.rs
nodedb-cluster-tests/tests/: array_raft_partition_recovery.rs  array_raft_replication.rs  array_raft_snapshot_install.rs  array_vshard_migration.rs  bitemporal_array_cluster.rs  calvin_cluster_pgwire_e2e.rs  cluster_array.rs  cluster_backup_restore.rs  cluster_collection_hard_delete.rs  cluster_execute_request.rs  cluster_post_apply_follower_dispatch.rs  cluster_procedures.rs  cluster_surrogate_replication.rs  cluster_triggers.rs  descriptor_lease_cross_node.rs  descriptor_lease_drain.rs  descriptor_lease_forwarding_and_renewal.rs  descriptor_lease_planner_integration.rs  descriptor_versioning_cross_node.rs  gateway_execute.rs  http_gateway_migration.rs  ilp_gateway_migration.rs  listeners_gateway_smoke.rs  listeners_typed_not_leader.rs  native_gateway_migration.rs  pgwire_gateway_migration.rs  planner_local_only.rs  prepared_cache_invalidation.rs  resp_gateway_migration.rs  sql_cluster_cross_node_dml.rs  sql_ddl_cluster.rs  surrogate_raft.rs  surrogate_vshard_transfer.rs
nodedb-cluster-tests/tests/common/: mod.rs
nodedb-cluster-tests/tests/sql_cluster_cross_node_dml_tests/: auth_objects.rs  cluster_boot.rs  ddl_objects.rs  schema_objects.rs
nodedb-fts/: Cargo.toml  README.md
nodedb-fts/src/: block.rs  lib.rs
nodedb-fts/src/analyzer/: synonym.rs
nodedb-fts/src/analyzer/language/cjk/: segmenter.rs
nodedb-fts/src/codec/: bitpack.rs  delta.rs  doc_id_map.rs
nodedb-fts/src/codec/simd_unpack/: mod.rs
nodedb-fts/src/index/: error.rs  mod.rs  synonym_groups.rs  writer.rs
nodedb-fts/src/lsm/: compaction.rs  merge.rs  parallel_build.rs  query.rs
nodedb-fts/src/lsm/segment/: format.rs  reader.rs  writer.rs
nodedb-fts/src/search/: bm25_search.rs  fuzzy_search.rs  mod.rs  query_parser.rs
nodedb-fts/src/search/bmw/: heap.rs  query.rs
nodedb-mem/: Cargo.toml  README.md
nodedb-mem/src/: arena.rs  budget.rs  budget_guard.rs  collection_arena.rs  error.rs  governor.rs  lib.rs  metrics.rs  reservation_token.rs
nodedb-physical/: Cargo.toml  README.md
nodedb-physical/src/: convert_context.rs  error.rs  lib.rs  physical_task.rs  surrogate.rs  visitor.rs
nodedb-physical/src/physical_plan/: array.rs  cluster_array.rs  columnar.rs  crdt.rs  graph.rs  kv.rs  meta.rs  mod.rs  query.rs  spatial.rs  text.rs  timeseries.rs  vector.rs  wire.rs
nodedb-physical/src/physical_plan/document/: enforcement_types.rs  merge_types.rs  mod.rs  op.rs  types.rs  update_value.rs
nodedb-test-support/: Cargo.toml
nodedb-test-support/src/: array_sync.rs  core_loop_runner.rs  lib.rs  pgwire_auth_helpers.rs  pgwire_harness.rs  tx_batch_helpers.rs
nodedb-test-support/src/cluster_harness/: cluster.rs  mod.rs  wait.rs
nodedb-test-support/src/cluster_harness/node/: inspect.rs  lifecycle.rs  mod.rs
nodedb-test-support/src/pgwire_harness/: mod.rs  multicore.rs  query.rs  restart.rs  start.rs  support.rs  types.rs
nodedb-vector/: Cargo.toml  README.md
nodedb-vector-gpu/: Cargo.toml  README.md
nodedb-vector/src/: adaptive_filter.rs  flat.rs  index_config.rs  ivf.rs  lib.rs  matryoshka.rs
nodedb-vector/src/collection/: checkpoint.rs  codec_build.rs  lifecycle.rs  lifecycle_compact.rs  lifecycle_insert_ops.rs  mod.rs  quantize.rs  sidecar_build.rs
nodedb-vector/src/delta/: compaction.rs
nodedb-vector/src/distance/: compute.rs  dispatch.rs  mod.rs  typed_scalar.rs
nodedb-vector/src/distance/simd/: avx2_typed.rs  avx512_typed.rs  neon_typed.rs  runtime.rs  wasm_simd128.rs
nodedb-vector/src/dtype/: cast.rs  mod.rs
nodedb-vector/src/hnsw/: arena.rs  build.rs  checkpoint.rs  flat_neighbors.rs  graph.rs  search.rs
nodedb-vector/src/hnsw/graph/: index.rs  mod.rs  types.rs
nodedb-vector/src/mmap_segment/: format.rs  mod.rs  reader.rs
nodedb-vector/src/navix/: acorn.rs  traversal.rs
nodedb-vector/src/quantize/: binary.rs  mod.rs  pq.rs  pq_codec.rs  sq8.rs
nodedb-vector/src/rerank/: codec.rs  gating.rs  mod.rs  pipeline.rs  recall.rs  sidecar.rs  types.rs
nodedb-vector/src/rerank/codecs/: bbq.rs  binary.rs  mod.rs  pq.rs  rabitq.rs  sq8.rs
nodedb-vector/src/segment_backing/: mod.rs  plain.rs
nodedb-vector/src/sieve/: collection.rs  router.rs
nodedb-vector/src/vamana/: build.rs  prune.rs
nodedb-vector/tests/: collection_bitmap_filter.rs  collection_checkpoint_tombstones.rs  collection_compact_doc_map.rs  collection_pq_config.rs  hnsw_layer_cap.rs  mmap_segment_madvise.rs  quantize_kmeans_distribution.rs  simd_length_safety.rs
nodedb-wal/: Cargo.toml  README.md
nodedb-wal/benches/: wal_throughput.rs
nodedb-wal/src/: double_write.rs  error.rs  group_commit.rs  lazy_reader.rs  lib.rs  mmap_reader.rs  reader.rs  recovery.rs  secure_mem.rs  segmented.rs  uring_writer.rs  writer.rs
nodedb-wal/src/record/: calvin.rs  header.rs  wal_record.rs
nodedb-wal/src/replay/: filter.rs
nodedb-wal/src/segment/: atomic_io.rs
nodedb-wal/tests/: crash_recovery.rs  durability_stress.rs  mmap_reader_madvise.rs  o_direct_alignment.rs  wal_collection_tombstone.rs  wal_encryption.rs
(+1530 files in other folders)
