[package]
name = "nodedb-cluster-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "3-node integration test suite for NodeDB. Heavy; runs in its own CI stage."

[lib]
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
nodedb = { workspace = true }
nodedb-array = { workspace = true }
nodedb-bridge = { workspace = true }
nodedb-cluster = { workspace = true }
nodedb-physical = { workspace = true }
nodedb-types = { workspace = true }
nodedb-test-support = { workspace = true }

tokio = { workspace = true, features = ["test-util"] }
tokio-postgres = { workspace = true }
tempfile = "3"
bytes = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
sonic-rs = { workspace = true }
zerompk = { workspace = true }
