[package]
name = "nodedb-fts"
description = "Shared full-text search engine for NodeDB — inverted index, BM25 scoring, analyzers, fuzzy matching"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []

[dependencies]
nodedb-types = { workspace = true }
nodedb-mem = { workspace = true }
serde = { workspace = true }
sonic-rs = { workspace = true }
zerompk = { workspace = true }
rust-stemmers = { workspace = true }
unicode-normalization = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
crc32c = "0.6"
arc-swap = { workspace = true }

# Dictionary-based CJK segmentation (always compiled in; selected at runtime)
# lang-zh falls back to CJK bigrams — the previous dictionary chain pulled
# jieba-rs → include-flate → libflate → yanked core2, breaking cargo publish.
# The bigram code path is the permanent state for v0.1.0.
lindera = { version = "2.3" }
icu_segmenter = { version = "1" }
whatlang = { version = "0.18" }

[dev-dependencies]
