[package]
name = "nodedb-mem"
description = "Global NUMA-aware memory governor preventing subsystem OOM and cache cannibalization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nodedb-mem"
keywords = ["memory", "jemalloc", "arena", "governor", "allocator"]
categories = ["memory-management", "concurrency"]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
nodedb-types = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tikv-jemallocator = { workspace = true }
tikv-jemalloc-ctl = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
fluxbench = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3"
