[package]
name = "nodedb-vector-gpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
license = "Apache-2.0"
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nodedb-vector-gpu"
keywords = ["gpu", "cuda", "vector", "cagra", "ann"]
categories = ["algorithms", "science"]
description = "GPU-accelerated vector index build (cuVS / CAGRA) for NodeDB Origin"

[features]
default = []
# Enables cuVS / CAGRA integration. Requires CUDA toolkit + nvcc on the build host.
cuvs = []

[dependencies]
nodedb-vector = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
