[package]
name = "nodedb-vector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared vector engine (HNSW index + distance functions) for NodeDB Origin and Lite"

[features]
default = []
# Retains ACORN-1 as a feature-flagged baseline for benchmarking against NaviX.
# Off by default; not intended for production use.
acorn-baseline = []

[dependencies]
nodedb-types = { workspace = true }
nodedb-codec = { workspace = true }
nodedb-mem = { workspace = true }
serde = { workspace = true }
zerompk = { workspace = true }
rkyv = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
roaring = { workspace = true }

memmap2 = { workspace = true }
libc = { workspace = true }
crc32c = { workspace = true }
nodedb-wal = { workspace = true }
arc-swap = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = { workspace = true }
libc = { workspace = true }
nodedb-wal = { workspace = true }
