[package]
name = "nodedb-vector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nodedb-vector"
keywords = ["vector", "hnsw", "vamana", "ann", "similarity-search"]
categories = ["algorithms", "science"]
description = "Shared vector engine (HNSW index + distance functions) for NodeDB Origin and Lite"

[features]
default = []
# Retains ACORN-1 as a feature-flagged baseline for benchmarking against NaviX.
# Off by default; not intended for production use.
acorn-baseline = []

[dependencies]
nodedb-types = { workspace = true }
nodedb-codec = { workspace = true }
nodedb-mem = { workspace = true }
serde = { workspace = true }
zerompk = { workspace = true }
rkyv = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
roaring = { workspace = true }

bytemuck = { workspace = true }
half = { workspace = true }
crc32c = { workspace = true }
arc-swap = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = { workspace = true }
libc = { workspace = true }
nodedb-wal = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = { workspace = true }
libc = { workspace = true }
nodedb-wal = { workspace = true }
