[package]
name = "nodedb-wal"
description = "Deterministic O_DIRECT write-ahead log with io_uring group commit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nodedb-wal"
keywords = ["wal", "write-ahead-log", "durability", "io-uring", "storage"]
categories = ["database-implementations", "filesystem"]

[features]
default = []
io-uring = ["dep:io-uring"]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
crc32c = { workspace = true }
libc = { workspace = true }
aes-gcm = { workspace = true }
getrandom = { workspace = true }
zeroize = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
fluxbench = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3"
rand = { workspace = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
io-uring = { workspace = true }

[[bench]]
name = "wal_throughput"
harness = false
